--- a/servicios.html
+++ b/servicios.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+    <input type="checkbox" id="header-min-toggle" class="header-min-toggle">
+  <label for="header-min-toggle" class="header-min-label">
+    &#8593; Minimizar barra de navegación
+  </label>
   <header class="header">
     <div class="logo-nav">
       <img src="imagenes/LOGO 2025 .png" alt="Logo" class="logo">
