--- a/contactenos.html
+++ b/contactenos.html
@@ -9,6 +9,10 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet" />
 </head>
 <body>
+  <input type="checkbox" id="header-min-toggle" class="header-min-toggle">
+  <label for="header-min-toggle" class="header-min-label">
+    &#8593; Minimizar barra de navegación
+  </label>
   <header class="header">
     <div class="logo-nav">
       <img src="imagenes/LOGO 2025 .png" alt="Logo" class="logo">
