--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -15,6 +15,7 @@
   <header class="header">
     <div class="logo-nav">
       <img src="imagenes/LOGO 2025 .png" alt="Logo" class="logo">
+      <span class="lema-empresa">TU TRANQUILIDAD VIAL, NUESTRO COMPROMISO CONSTANTE</span>
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Inicio</a></li>
