--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="about-hero-img">
-        <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=600&q=80" alt="Equipo RH Asesorías">
+        <img src="imagenes/LOGO 2025 .png" alt="Equipo RH Asesorías">
       </div>
     </section>
 
