--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -144,18 +144,14 @@
       <h2>Nuestros Aliados</h2>
       <div class="partners-logos">
         <div class="partner-logo">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Logo_Efecty.png" alt="Efecty">
+          <img src="imagenes/efecty.png" alt="Efecty">
         </div>
         <div class="partner-logo">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Logo_Servientrega.png" alt="Servientrega">
+          <img src="imagenes/servi.jpg" alt="Servientrega">
         </div>
         <div class="partner-logo">
-          <img src="https://coordinadora.com/assets/images/logo.png" alt="Coordinadora">
+          <img src="imagenes/cooor.png" alt="Coordinadora">
         </div>
-        <div class="partner-logo">
-          <img src="https://seeklogo.com/images/F/fasecolda-logo-C2E8E6B9B2-seeklogo.com.png" alt="Fasecolda">
-        </div>
-      </div>
     </section>
 
     <section class="about-achievements">
@@ -191,7 +187,7 @@
         </div>
         <div class="about-equipo-card">
           <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Asesora Laura">
-          <h3>Laura Gómez</h3>
+          <h3>Maira Uribe</h3>
           <p>Gestora de Trámites</p>
         </div>
         <div class="about-equipo-card">
