--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -88,7 +88,7 @@
           </ul>
         </div>
         <div class="about-historia-img">
-          <img src="https://images.unsplash.com/photo-1521737852567-6949f3f9f2b5?auto=format&fit=crop&w=400&q=80" alt="Atención RH Asesorías">
+          <img src="imagenes/Image (3).jpg" alt="Atención RH Asesorías">
         </div>
       </div>
     </section>
