--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <!-- HERO SLIDER en el inicio -->
 <section class="hero hero-slider">
   <div class="hero-slider-images">
-    <img src="https://github.com/echava1234/duransua2/raw/main/info-2.jpg" alt="Tránsito Medellín" class="hero-slide active">
-    <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=1100&q=80" alt="Asesoría Vehicular" class="hero-slide">
-    <img src="https://images.unsplash.com/photo-1521737852567-6949f3f9f2b5?auto=format&fit=crop&w=1100&q=80" alt="Documentos Digitales" class="hero-slide">
+    <img src="imagenes/Image (4).jpg" alt="Tránsito Medellín" class="hero-slide active">
+    <img src="imagenes/Image (5).jpg" alt="Asesoría Vehicular" class="hero-slide">
+    <img src="imagenes/Image (6).jpg" alt="Documentos Digitales" class="hero-slide">
   </div>
   <div class="hero-slider-content">
     <h1>Trámites de Tránsito sin Complicaciones</h1>
