--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <!-- SECCIÓN HERO -->
   <!-- HERO SLIDER en el inicio -->
 <section class="hero hero-slider">
+  <div class="hero-slider-row">
   <div class="hero-slider-images">
     <img src="imagenes/Image (4).jpg" alt="Tránsito Medellín" class="hero-slide active">
     <img src="imagenes/Image (5).jpg" alt="Asesoría Vehicular" class="hero-slide">
