--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
   <div class="hero-slide active">
   <div class="hero-slider-images">
     <img src="imagenes/Image (4).jpg" alt="Tránsito Medellín" class="hero-slide active">
+     </div>
+  <div class="hero-slider-content">
+    <h1>Trámites de Tránsito sin Complicaciones</h1>
+    <p>Confía en RH Asesorías Tránsito para gestionar tu traspaso, levantamiento de prenda y otros trámites, de forma rápida y segura.</p>
+    <a href="servicios.html" class="cta-btn">Ver Servicios</a>
+  </div>
     <img src="imagenes/Image (5).jpg" alt="Asesoría Vehicular" class="hero-slide">
+     </div>
+  <div class="hero-slider-content">
+    <h1>Trámites de Tránsito sin Complicaciones</h1>
+    <p>Confía en RH Asesorías Tránsito para gestionar tu traspaso, levantamiento de prenda y otros trámites, de forma rápida y segura.</p>
+    <a href="servicios.html" class="cta-btn">Ver Servicios</a>
+  </div>
     <img src="imagenes/Image (6).jpg" alt="Documentos Digitales" class="hero-slide">
   </div>
   <div class="hero-slider-content">
