--- a/index.html
+++ b/index.html
@@ -36,18 +36,39 @@
   <!-- HERO SLIDER en el inicio -->
 <section class="hero hero-slider">
   <div class="hero-slider-row">
-  <div class="hero-slide active">
-  <div class="hero-slider-images">
-    <img src="imagenes/Image (4).jpg" alt="Tránsito Medellín" class="hero-slide active">
-
-    <img src="imagenes/Image (5).jpg" alt="Asesoría Vehicular" class="hero-slide">
-     
-    <img src="imagenes/Image (6).jpg" alt="Documentos Digitales" class="hero-slide">
-  </div>
-  <div class="hero-slider-content">
-    <h1>Trámites de Tránsito sin Complicaciones</h1>
-    <p>Confía en RH Asesorías Tránsito para gestionar tu traspaso, levantamiento de prenda y otros trámites, de forma rápida y segura.</p>
-    <a href="servicios.html" class="cta-btn">Ver Servicios</a>
+    <!-- Slide 1 -->
+    <div class="hero-slide active">
+      <div class="hero-slide-img">
+        <img src="imagenes/Image (4).jpg" alt="Tránsito Medellín">
+      </div>
+      <div class="hero-slide-text">
+        <h1>Trámites de Tránsito sin Complicaciones</h1>
+        <p>Confía en RH Asesorías Tránsito para gestionar tu traspaso, levantamiento de prenda y otros trámites, de forma rápida y segura.</p>
+        <a href="servicios.html" class="cta-btn">Ver Servicios</a>
+      </div>
+    </div>
+    <!-- Slide 2 -->
+    <div class="hero-slide">
+      <div class="hero-slide-img">
+        <img src="imagenes/Image (5).jpg" alt="Asesoría Vehicular">
+      </div>
+      <div class="hero-slide-text">
+        <h1>Asesoría Vehicular Personalizada</h1>
+        <p>Te acompañamos en cada paso para que tus trámites sean simples y sin demoras.</p>
+        <a href="servicios.html" class="cta-btn">Descubre cómo</a>
+      </div>
+    </div>
+    <!-- Slide 3 -->
+    <div class="hero-slide">
+      <div class="hero-slide-img">
+        <img src="imagenes/Image (6).jpg" alt="Documentos Digitales">
+      </div>
+      <div class="hero-slide-text">
+        <h1>Documentos Digitales Rápidos</h1>
+        <p>Obtén tus documentos de tránsito de forma digital, fácil y segura, sin filas ni esperas.</p>
+        <a href="servicios.html" class="cta-btn">Solicítalos aquí</a>
+      </div>
+    </div>
   </div>
   <div class="hero-slider-dots">
     <span class="hero-dot active"></span>
