--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="hero-slide-text">
         <h1>Asesoría Vehicular Personalizada</h1>
         <p>Te acompañamos en cada paso para que tus trámites sean simples y sin demoras.</p>
-        <a href="servicios.html" class="cta-btn">Descubre cómo</a>
+        <a href="contactenos.html" class="cta-btn">Descubre cómo</a>
       </div>
     </div>
     <!-- Slide 3 -->
@@ -66,7 +66,7 @@
       <div class="hero-slide-text">
         <h1>Documentos Digitales Rápidos</h1>
         <p>Obtén tus documentos de tránsito de forma digital, fácil y segura, sin filas ni esperas.</p>
-        <a href="servicios.html" class="cta-btn">Solicítalos aquí</a>
+        <a href="contactenos.html" class="cta-btn">Solicítalos aquí</a>
       </div>
     </div>
   </div>
