--- a/contactenos.html
+++ b/contactenos.html
@@ -38,7 +38,7 @@
     </section>
     <section class="contacto-formulario">
       <h2>Envíanos tu mensaje</h2>
-      <form action="https://formsubmit.co/rhasesoriastransito@gmail.com" method="POST">
+      <form action="https://formsubmit.co/miguelechavarria1002@outlook.es" method="POST">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
         <div class="campo-form">
