--- a/contactenos.html
+++ b/contactenos.html
@@ -36,30 +36,51 @@
       <p><strong>Teléfonos:</strong> 3150459589, 3143159586</p>
       <p><strong>Correo:</strong> <a href="mailto:rhasesoriastransito@gmail.com">rhasesoriastransito@gmail.com</a></p>
     </section>
-    <section class="contacto-formulario">
-      <h2>Envíanos tu mensaje</h2>
-      <form action="https://formsubmit.co/miguelechavarria1002@outlook.es" method="POST">
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
-        <div class="campo-form">
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" required>
-        </div>
-        <div class="campo-form">
-          <label for="telefono">Teléfono:</label>
-          <input type="tel" id="telefono" name="telefono">
-        </div>
-        <div class="campo-form">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
-        </div>
-        <div class="campo-form">
-          <label for="mensaje">Mensaje:</label>
-          <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-        </div>
-        <button type="submit" class="cta-btn">Enviar mensaje</button>
-      </form>
-    </section>
+   <section class="contacto-formulario">
+  <h2>Envíanos tu mensaje</h2>
+  <form id="mi-formulario" action="https://formsubmit.co/miguelechavarria1002@outlook.es" method="POST">
+    <div id="form-success" style="display:none; color:green; margin-bottom:1em;">
+      ¡Gracias! Tu mensaje ha sido enviado correctamente.
+    </div>
+    <input type="hidden" name="_captcha" value="false">
+    <!-- Puedes quitar _next si quieres mostrar mensaje en la misma página -->
+    <div class="campo-form">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required>
+    </div>
+    <div class="campo-form">
+      <label for="telefono">Teléfono:</label>
+      <input type="tel" id="telefono" name="telefono">
+    </div>
+    <div class="campo-form">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div class="campo-form">
+      <label for="mensaje">Mensaje:</label>
+      <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+    </div>
+    <button type="submit" class="cta-btn">Enviar mensaje</button>
+  </form>
+</section>
+
+<script>
+document.getElementById('mi-formulario').addEventListener('submit', function(e) {
+  e.preventDefault();
+  fetch(this.action, {
+    method: 'POST',
+    body: new FormData(this),
+    headers: { 'Accept': 'application/json' }
+  }).then(response => {
+    if (response.ok) {
+      document.getElementById('form-success').style.display = 'block';
+      this.reset();
+    } else {
+      alert('Error al enviar. Intenta de nuevo.');
+    }
+  });
+});
+</script>
   </main>
   <div class="floating-services">
     <span>Prestamos servicios de <strong>Efecty</strong>, <strong>Servientrega</strong> y <strong>Coordinadora</strong></span>
