--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
   <footer>
     <p>&copy; 2025 RH Asesorías Tránsito</p>
   </footer>
+  <footer>
+    <p> Pagina diseñada por: Miguel Echavarria -- contacto: miguelechavarria1002@outlook.es </p>
+  </footer>
   <script>
   document.addEventListener('DOMContentLoaded', function() {
     const slides = document.querySelectorAll('.hero-slide');
