--- a/contactenos.html
+++ b/contactenos.html
@@ -93,6 +93,9 @@ document.getElementById('mi-formulario').addEventListener('submit', function(e) 
   <footer>
     <p>&copy; 2025 RH Asesorías Tránsito</p>
   </footer>
+   <footer>
+    <p> Pagina diseñada por: Miguel Echavarria -- contacto: miguelechavarria1002@outlook.es </p>
+  </footer>
   <!-- Mapbox GL JS -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
   <script>
