--- a/blog.html
+++ b/blog.html
@@ -54,5 +54,8 @@
   <footer>
     <p>&copy; 2025 RH Asesorías Tránsito</p>
   </footer>
+   <footer>
+    <p> Pagina diseñada por: Miguel Echavarria -- contacto: miguelechavarria1002@outlook.es </p>
+  </footer>
 </body>
 </html>
