--- a/contactenos.html
+++ b/contactenos.html
@@ -37,7 +37,7 @@
       <p><strong>Correo:</strong> <a href="mailto:rhasesoriastransito@gmail.com">rhasesoriastransito@gmail.com</a></p>
     </section>
    <section class="contacto-formulario">
-  <h2>Envíanos tu mensaje</h2>
+  <h2>Envíanos tu mensaje para hacer tu cotización</h2>
   <form id="mi-formulario" action="https://formsubmit.co/miguelechavarria1002@outlook.es" method="POST">
     <div id="form-success" style="display:none; color:green; margin-bottom:1em;">
       ¡Gracias! Tu mensaje ha sido enviado correctamente.
