--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Slide 1 -->
     <div class="hero-slide active">
       <div class="hero-slide-img">
-        <img src="imagenes/Image (4).jpg" alt="Tránsito Medellín">
+        <img src="WhatsApp Image 2025-06-03 at 3.12.21 PM.jpeg" alt="Tránsito Medellín">
       </div>
       <div class="hero-slide-text">
         <h1>Trámites de Tránsito sin Complicaciones</h1>
@@ -61,7 +61,7 @@
     <!-- Slide 3 -->
     <div class="hero-slide">
       <div class="hero-slide-img">
-        <img src="imagenes/Image (6).jpg" alt="Documentos Digitales">
+        <img src="WhatsApp Image 2025-06-03 at 4.22.50 PM.jpeg" alt="Documentos Digitales">
       </div>
       <div class="hero-slide-text">
         <h1>Documentos Digitales Rápidos</h1>
