--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,20 @@
     <div class="blog-posts">
       <div class="blog-post">
         <h2>Nuevo pico y placa en la ciudad</h2>
-        <p>Desde el 1 de junio entra en vigencia el nuevo pico y placa para vehículos particulares. Consulta cómo te afecta.</p>
+        <p>Infórmate sobre los cambios de la medida de Pico y Placa para el primer semestre de 2025 en Medellín, según el Decreto 071 de 2025, por medio del cual se establece la rotación y reglamentación de la medida de pico y placa en el Distrito de Medellín para el primer semestre del año 2025.
+
+El Pico y Placa es una medida que restringe la circulación de vehículos en la ciudad, con el objetivo de mejorar el tráfico y la movilidad de los ciudadanos. En Medellín el pico y placa funciona de la siguiente manera para carros particulares (con el último número de la placa) y motos (con el primer número de la placa) de 2 y 4 tiempos:
+
+– Lunes: 3 y 4.
+– Martes: 2 y 8.
+– Miércoles: 5 y 9.
+– Jueves: 1 y 7.
+– Viernes: 0 y 6.
+
+La norma se implementa de lunes a viernes entre las 5:00 a. m. y las 8:00 p. m. El periodo de los nuevos dígitos inicia el lunes 3 de febrero de 2025.</p>
+        <div class="about-hero-img">
+        <img src="imagenes/Rotacion-Pico-y-Placa-Medellin-1-1024x1024.jpg" alt="pico y placa">
+      </div>
         <span class="fecha-post">01/06/2025</span>
       </div>
       <div class="blog-post">
