--- a/blog.html
+++ b/blog.html
@@ -42,8 +42,8 @@ El Pico y Placa es una medida que restringe la circulación de vehículos en la 
 – Viernes: 0 y 6.
 </p>
 <p>La norma se implementa de lunes a viernes entre las 5:00 a. m. y las 8:00 p. m. El periodo de los nuevos dígitos inicia el lunes 3 de febrero de 2025.</p>
-        <div class="blog-hero-img">
-        <img src="imagenes/Rotacion-Pico-y-Placa-Medellin-1-1024x1024.jpg" alt="pico y placa">
+        <div class="blog-posts">
+        <img src="imagenes/Rotacion-Pico-y-Placa-Medellin-1-1024x1024.jpg" alt="pico y placa" class="blog-hero-img">
       </div>
         <span class="fecha-post">01/06/2025</span>
       </div>
