--- a/blog.html
+++ b/blog.html
@@ -60,8 +60,8 @@ El Pico y Placa es una medida que restringe la circulación de vehículos en la 
     <span>Prestamos servicios de <strong>Efecty</strong>, <strong>Servientrega</strong> y <strong>Coordinadora</strong></span>
   </div>
   <div class="burbujas">
-    <a href="https://wa.me/573143159586" class="burbuja whatsapp" title="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
-    <a href="mailto:rhasesoriastransito@gmail.com" class="burbuja correo" title="Correo"><i class="fas fa-envelope"></i></a>
+    <a href="https://wa.me/573150459589" class="burbuja whatsapp" title="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <a href="mailto:rhasesoriastransito@gmail.com?subject=Asunto%20del%20correo&body=Hola,%20me%20gustaría%20saber%20más%20sobre%20este%20servicio" class="burbuja correo" title="Correo"><i class="fas fa-envelope"></i></a>
     <a href="https://www.instagram.com/rhasesorias_transito?igsh=YXU3ZWJ1eHBkcWQyclass" class="burbuja instagram" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
   </div>
   <footer>
