--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Slide 2 -->
     <div class="hero-slide">
       <div class="hero-slide-img">
-        <img src="imagenes/Image (5).jpg" alt="Asesoría Vehicular">
+        <img src="imagenes/ff74673c-188d-41c2-8a14-6eabec6754ff.jpeg " alt="Asesoría Vehicular">
       </div>
       <div class="hero-slide-text">
         <h1>Asesoría Vehicular Personalizada</h1>
