--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -87,7 +87,7 @@
             <li><i class="fas fa-star"></i> 98% de clientes satisfechos</li>
           </ul>
         </div>
-        <div class="sobre-hero-img">
+        <div class="about-hero-img">
           <img src="imagenes/Image (3).jpg" alt="Atención RH Asesorías">
         </div>
       </div>
