--- a/blog.html
+++ b/blog.html
@@ -45,21 +45,21 @@
   <main>
     <h1 class="titulo-blog"><i class="fas fa-newspaper"></i> Blog de Noticias de Tránsito</h1>
 
-    <!-- FORMULARIOS ANTES DE LAS NOTICIAS -->
+    
     <!-- Sección 1: Formularios para traspaso -->
     <section class="blog-section">
       <h2>Formularios para traspaso</h2>
       <div class="form-card">
         <h3>Formulario de mandato</h3>
-        <p>Descarga el <a href="public/files/formulario-mandato-traspaso.pdf" download>formulario de mandato</a>.</p>
+        <p>Descarga el <a href="imagenes/CONTRATO DE MANDATO.pdf" download>formulario de mandato</a>.</p>
       </div>
       <div class="form-card">
         <h3>Formulario de compraventa</h3>
-        <p>Descarga el <a href="public/files/formulario-compraventa.pdf" download>formulario de compraventa</a>.</p>
+        <p>Descarga el <a href="imagenes/COMPRAVENTA .pdf" download>formulario de compraventa</a>.</p>
       </div>
       <div class="form-card">
         <h3>Formulario RUNT</h3>
-        <p>Descarga el <a href="public/files/formulario-runt-traspaso.pdf" download>formulario RUNT</a>.</p>
+        <p>Descarga el <a href="imagenes/Formulario RUNT.pdf" download>formulario RUNT</a>.</p>
       </div>
     </section>
 
@@ -68,15 +68,15 @@
       <h2>Formularios para traspaso indeterminado</h2>
       <div class="form-card">
         <h3>Formulario de mandato</h3>
-        <p>Descarga el <a href="public/files/formulario-mandato-indeterminado.pdf" download>formulario de mandato</a>.</p>
+        <p>Descarga el <a href="imagenes/CONTRATO DE MANDATO.pdf" download>formulario de mandato</a>.</p>
       </div>
       <div class="form-card">
         <h3>Solicitud indeterminado</h3>
-        <p>Descarga la <a href="public/files/solicitud-indeterminado.pdf" download>solicitud indeterminado</a>.</p>
+        <p>Descarga la <a href="imagenes/SOLICITUD INDETERMINADOS.pdf" download>solicitud indeterminado</a>.</p>
       </div>
       <div class="form-card">
         <h3>Formulario RUNT</h3>
-        <p>Descarga el <a href="public/files/formulario-runt-indeterminado.pdf" download>formulario RUNT</a>.</p>
+        <p>Descarga el <a href="imagenes/Formulario RUNT.pdf" download>formulario RUNT</a>.</p>
       </div>
     </section>
 
@@ -85,11 +85,11 @@
       <h2>Formularios para duplicado de matrícula o placa</h2>
       <div class="form-card">
         <h3>Formulario de mandato</h3>
-        <p>Descarga el <a href="public/files/formulario-mandato-duplicado.pdf" download>formulario de mandato</a>.</p>
+        <p>Descarga el <a href="imagenes/CONTRATO DE MANDATO.pdf" download>formulario de mandato</a>.</p>
       </div>
       <div class="form-card">
         <h3>Formulario RUNT</h3>
-        <p>Descarga el <a href="public/files/formulario-runt-duplicado.pdf" download>formulario RUNT</a>.</p>
+        <p>Descarga el <a href="imagenes/Formulario RUNT.pdf" download>formulario RUNT</a>.</p>
       </div>
     </section>
 
@@ -101,13 +101,13 @@
 <p>
 El Pico y Placa es una medida que restringe la circulación de vehículos en la ciudad, con el objetivo de mejorar el tráfico y la movilidad de los ciudadanos. En Medellín el pico y placa funciona de la siguiente manera para carros particulares (con el último número de la placa) y motos (con el primer número de la placa) de 2 y 4 tiempos:
 
-– Lunes: 3 y 4.
-– Martes: 2 y 8.
-– Miércoles: 5 y 9.
-– Jueves: 1 y 7.
-– Viernes: 0 y 6.
+– Lunes: 6 y 9.
+– Martes: 5 y 7.
+– Miércoles: 1 y 8.
+– Jueves: 0 y 2.
+– Viernes: 3 y 4.
 </p>
-<p>La norma se implementa de lunes a viernes entre las 5:00 a. m. y las 8:00 p. m. El periodo de los nuevos dígitos inicia el lunes 3 de febrero de 2025.</p>
+<p>La norma se implementa de lunes a viernes entre las 5:00 a. m. y las 8:00 p. m. El periodo de los nuevos dígitos inicia el lunes 4 de agosto de 2025.</p>
         <div class="blog-posts">
         <img src="imagenes/Rotacion-Pico-y-Placa-Medellin-1-1024x1024.jpg" alt="pico y placa" class="blog-hero-img">
       </div>
