--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
   });
   </script>
   <main>
-    <h1 class="titulo-blog"><i class="fas fa-newspaper"></i> Blog de Noticias de Tránsito</h1>
+    <h1 class="titulo-blog"><i class="fas fa-newspaper"></i> Formularios a descargar || Blog de Noticias de Tránsito</h1>
 
     
     <!-- Sección 1: Formularios para traspaso -->
