--- a/servicios.html
+++ b/servicios.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Servicios - RH Asesorías Tránsito</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <!-- FontAwesome para los íconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
