--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="noticias-grid">
         <article>
           <h3>¡Atención! Nuevo pico y placa en Medellín</h3>
-          <p>Infórmate sobre los cambios de la medida de Pico y Placa para el primer semestre de 2025 en Medellín. <a href="blog.html">Ver más</a></p>
+          <p>Infórmate sobre los cambios de la medida de Pico y Placa para el segundo semestre de 2025 en Medellín. <a href="blog.html">Ver más</a></p>
         </article>
         <article>
           <h3>Trámites de tránsito ahora más digitales</h3>
