--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -178,7 +178,7 @@
       </div>
     </section>
 
-    <section class="about-equipo">
+<!--     <section class="about-equipo">
       <h2>Nuestro Equipo</h2>
       <div class="about-equipo-grid">
         <div class="about-equipo-card">
@@ -197,7 +197,7 @@
           <p>Especialista en Digitalización</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="about-testimonios">
       <h2>Testimonios</h2>
