--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Blog - RH Asesorías Tránsito</title>
+  <link rel="icon" href="imagenes/LOGO 2025 .png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
