--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Sobre Nosotros - RH Asesorías Tránsito</title>
   <link rel="icon" href="imagenes/LOGO 2025 .png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" href="style.css">
   <!-- FontAwesome para iconos -->
